# idem

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  SPECS.md  VISION.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
apps/api/: package.json
apps/api/src/: env.ts  index.ts  router.ts  trpc.ts
apps/api/src/engine/: rating.ts
apps/api/src/lib/: random.ts
apps/api/src/modules/entity/: repository.ts  router.ts  service.ts
apps/api/src/modules/judgment/: repository.ts  router.ts  service.ts
apps/api/src/modules/passport/: repository.ts  router.ts  service.ts
apps/api/src/modules/session/: repository.ts  router.ts  service.ts
apps/api/src/modules/user/: repository.ts  router.ts
apps/mobile/: app.json  eas.json  metro.config.js  package.json  tsconfig.json
apps/mobile/app/: _layout.tsx  index.tsx  onboarding.tsx  passport.tsx
apps/mobile/src/components/: PrecisionGauge.tsx  RatingSession.tsx  SortRanker.tsx  SwipeCard.tsx
apps/mobile/src/lib/: api.ts
pipeline/: pyproject.toml
pipeline/idem_pipeline/: cli.py  config.py  db.py  dedup.py  models.py  normalize.py  publish.py  validate.py
pipeline/idem_pipeline/extract/: axes.py  deezer.py  food.py  openlibrary.py  tmdb.py  wikidata_places.py
pipeline/sources/: axes.fr.json  food.fr.json
