[project]
name = "idem-pipeline"
version = "0.1.0"
description = "Pipeline d'ingestion d'entités idem — SOURCE → EXTRACT → NORMALIZE → DEDUP → VALIDATE → PUBLISH (SPEC.md §2.4)"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "psycopg[binary]>=3.2",
]

[project.scripts]
idem-pipeline = "idem_pipeline.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["idem_pipeline*"]
